[fix] fixes ganme won modal on mobile + expression changed... error

--- a/src/app/components/game-won-modal/game-won-modal.component.scss
+++ b/src/app/components/game-won-modal/game-won-modal.component.scss
@@ -23,7 +23,8 @@
   }
 
   .modal {
-    width: 600px;
+    width: 80vw;
+    max-width: 600px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
